--- a/CameraDetectorDemo/src/main/res/layout/activity_main.xml
+++ b/CameraDetectorDemo/src/main/res/layout/activity_main.xml
@@ -1,36 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context=".MainActivity"
-    android:id="@+id/main_layout">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:id="@+id/sdk_start_button"/>
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textOn="BACK"
-        android:textOff="FRONT"
-        android:id="@+id/front_back_toggle_button"
-        android:layout_above="@id/sdk_start_button"
-        android:layout_alignParentRight="true"
-        android:padding="5dp"/>
+    android:id="@+id/main_layout" android:onClick="screenTapped">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:id="@+id/share_button"
+        android:text="Share"
+        android:textSize="40dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:id="@+id/surfaceview_visibility_button"/>
+        android:layout_alignParentEnd="true" />
 
 
 
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:background="#444444"
-        android:id="@+id/smile_textview"/>
+        android:layout_width="200dp"
+        android:layout_height="180dp"
+        android:id="@+id/smile_textview"
+        android:textSize="120dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
